--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,56 @@
-body{
-   margin: 0;
+html, body {
+  margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  
+  height: auto;
+  overflow-x: hidden;  
+  overflow-y: auto;    
+  scroll-behavior: smooth;
 }
 
+.app_projecttest{
+    background: linear-gradient(
+    135deg,
+    rgba(17, 17, 17, 0.95) 0%,
+    rgba(25, 25, 45, 0.9) 30%,
+    rgba(35, 35, 65, 0.85) 70%,
+    rgba(40, 40, 70, 0.9) 100%
+  );
+}
 .app_body{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+   background: linear-gradient(
+    135deg,
+    rgba(17, 17, 17, 0.95) 0%,
+    rgba(25, 25, 45, 0.9) 30%,
+    rgba(35, 35, 65, 0.85) 70%,
+    rgba(40, 40, 70, 0.9) 100%
+  );
 }
-/* Target vertical scrollbar */
+
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track (background behind the scroll handle) */
+
 ::-webkit-scrollbar-track {
   background: transparent;
 }
 
-/* Scroll thumb (the actual scroll handle) */
+
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(162, 163, 163, 0.8); /* low opacity by default */
+  background-color: rgba(162, 163, 163, 0.8); 
   border-radius: 10px;
   transition: background-color 0.3s ease;
 }
 
-/* On hover over scrollbar thumb */
+
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(249, 250, 252, 0.9); /* higher opacity on hover */
+  background-color: rgba(249, 250, 252, 0.9); 
 }
 
-/* Remove up/down arrow buttons */
 ::-webkit-scrollbar-button {
   display: none;
   height: 0;
-}
-
-.testimonials {
-  width: 100vw;
-  padding: 50px 20px;
-  /* background-color: ; */
-  color: white;
-  text-align: center;
-}
-
-.testimonials_header {
-  font-size: 42px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.testimonials_sub {
-  font-size: 20px;
-  max-width: 600px;
-  margin: 0 auto;
-  line-height: 1.5;
-}
-html, body {
-  height: auto;
-  overflow: auto;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
 }
